--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-11-23 : </strong></strong>Cinnamon edition 421.151201.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-11-29 : </strong></strong>BareBones edition 421.151129.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-27 : </strong></strong>XFCE edition 421.151127.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-26 : </strong></strong>Budgie edition 421.151126.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
@@ -125,10 +126,10 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/81e204567f2befcb839e411c0d93c3ee/GeckoLinux_Cinnamon.x86_64-421.151123.1.iso">
+        <a href="https://susestudio.com/download/573ff4e2a33317dac3d9ed7e1f364227/GeckoLinux_Cinnamon.x86_64-421.151201.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>Download GeckoLinux Cinnamon edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151123.1">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151201.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
