--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 
+<li><strong>2016-05-27 : </strong></strong>all Static editions 421.160607.0 (<a href="https://groups.google.com/forum/#!topic/geckolinux-updates/wV_igFwuJCQ">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>XFCE edition 421.160605.0 (<a href="https://groups.google.com/forum/#!msg/geckolinux-updates/-sNd0eomHH0/TXX7RykABQAJ">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160601.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
 <li><strong>2016-05-27 : </strong></strong>Plasma Stable edition 421.160527.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable">release notes</a>)</li>
@@ -140,9 +141,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>GeckoLinux Static </br> Cinnamon
-		      </br> <a href="https://susestudio.com/download/e0e641a273798d745d666bd313861176/GeckoLinux_Cinnamon.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/87ffcb412aa062a244d31aaded00f93d/GeckoLinux_Cinnamon.x86_64-421.160607.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.160607.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -150,9 +151,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>GeckoLinux Static </br> XFCE
-		      </br> <a href="https://susestudio.com/download/df287e538a90e95dbba5aa8fb822d99c/GeckoLinux_XFCE.x86_64-421.160605.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/828f044b5c77cc3b8b5bd34d3fe3e2cd/GeckoLinux_XFCE.x86_64-421.160607.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160605.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160607.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -160,9 +161,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>GeckoLinux Static </br> Gnome
-		      </br> <a href="https://susestudio.com/download/44e71dd1a66d73ddb81cd31e016676a3/GeckoLinux_Gnome.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/e5640e3e227c2f6e72c0bfb21915ca19/GeckoLinux_Gnome.x86_64-421.160607.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.160607.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -170,9 +171,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>GeckoLinux Static </br> Plasma Stable
-		      </br> <a href="https://susestudio.com/download/d9c0e5a5e632a33705aed433b661def8/GeckoLinux_Plasma_Stable.x86_64-421.160601.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/f6f129641e867ded21e30ed86fcf05f6/GeckoLinux_Plasma_Stable.x86_64-421.160607.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=421.160601.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma-stable/start_testdrive?version=421.160607.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -182,9 +183,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>GeckoLinux Static </br> Mate
-		      </br> <a href="https://susestudio.com/download/2aede98b81f880d6d9178f1ba4ce4a91/GeckoLinux_Mate.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/56e824ce40a3c33a30db43d6fe4adb23/GeckoLinux_Mate.x86_64-421.160607.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.160607.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -192,9 +193,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>GeckoLinux Static </br> Budgie
-		      </br> <a href="https://susestudio.com/download/408b8b3c7015606ae1c935489c6825bd/GeckoLinux_Budgie10.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/1a91dcded6f4b09b59f196e330442898/GeckoLinux_Budgie10.x86_64-421.160607.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160607.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -202,9 +203,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
         <figcaption>GeckoLinux Static </br> LXQt
-		      </br> <a href="https://susestudio.com/download/560909a8ef6339b1fe4c7e38b5986a88/GeckoLinux_LXQt.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/844df94b81ef370af91be5ec5d50c441/GeckoLinux_LXQt.x86_64-421.160607.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.160607.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
@@ -212,9 +213,9 @@ figcaption {
       <figure>
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>GeckoLinux Static </br> "Barebones"
-		      </br> <a href="https://susestudio.com/download/70b57f278b253f5964e9ce72f76414a2/GeckoLinux_BareBones.x86_64-421.160527.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
+		      </br> <a href="https://susestudio.com/download/2b0b567d2086bd7ef683c29b188506c9/GeckoLinux_BareBones.x86_64-421.160607.0.iso"><img src="https://cloud.githubusercontent.com/assets/2692138/15225130/8ef35838-1842-11e6-915c-3a94c5a7f197.png"/></a>
 		      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones#appliance-downloads"><img src="https://cloud.githubusercontent.com/assets/2692138/15517823/7b152e8c-21bf-11e6-9ec9-2a41bd5f9cc2.png"/></a>
-	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.160527.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
+	  	      </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.160607.0"><img src="https://cloud.githubusercontent.com/assets/2692138/15225120/85236c1c-1842-11e6-9a2d-08d73030c757.png"/></a>
         </figcaption>
       </figure>
     </div>
